   when detecting a private net address.
 - Simplified default nick-right-click menu.
 - Show "Last Talk" in nick-right-click menu as "minutes ago".
 - Strip mIRC colour from away message in right-click menu.
 - Warn when opening banlist in non-channel.
 - Reorganised and simplified IRC/Server menus and new View menu.
 - The editable Server menu is no more, if you want it type
   /set gui_usermenu 1.
 - Option to view channels in tabs or tree structure.
 - Shorter titlebar text for better viewing in taskbar.
 - Disabled key-search in server list, as GTK's auto-find does this
   better.
 - Removed "Connect in new tab" button in server list, it now does it
   intelligently. Use stock Connect icon.
 - Removed "Tint (shade) transparency" item from settings and figure
   it out based on tint values.
 - When closing a tab, re-focus the one near by, instead of always the
   last.
 - Firefox style close button.
 - The lag and throttle metres now have tooltips that give you real
   information.
 - Added workaround to show on-join ChanServ notices in the right tab.
 - Tab scroll buttons are now side-by-side when in vertical mode.
 - Automatically change key shortcut of "Marked Away" if the
   translation already uses ALT-A for the Help menu (e.g _Aide in
   French).
 - Your nickname in the bottom-left corner now turns gray when you are
   marked away, just like the userlist.
 - Introduced a delay before joining channels, to allow for FreeNode's
   short comings. If a umode +e is received it'll send auto-join
   channels immediately.
 - Plugin API: Added win_ptr to xchat_get_info.
 - Non-irc (utility) tabs can now be detached aswell.
 - Fixed behaviour problems of the userlist pane, which might be set
   incorrectly if the window was resized while a server-tab is focued.
 - Added a confirm-dialog when trying to close a server-tab with
   children.
 - Server list's edit window now gives you an option of a network
   specific "Second choice" nickname.