@@ -21,7 +21,7 @@ Where "NUMBER" is the bug number.
  - Warn when opening banlist in non-channel.
  - Reorganised and simplified IRC/Server menus and new View menu.
  - The editable Server menu is no more, if you want it type
-   /set gui_usermenu 1.
+   /set gui_usermenu 1 and restart.
  - Option to view channels in tabs or tree structure.
  - Shorter titlebar text for better viewing in taskbar.
  - Disabled key-search in server list, as GTK's auto-find does this
@@ -34,7 +34,7 @@ Where "NUMBER" is the bug number.
    last.
  - Firefox style close button.
  - The lag and throttle metres now have tooltips that give you real
-   information.
+   information (hover the pointer over them).
  - Added workaround to show on-join ChanServ notices in the right tab.
  - Tab scroll buttons are now side-by-side when in vertical mode.
  - Automatically change key shortcut of "Marked Away" if the
@@ -58,8 +58,12 @@ Where "NUMBER" is the bug number.
  - Fixed: The WHOIS away-line ignored irc_whois_front setting.
  - Scroll-wheel now works while hovering over a tab (Khisanth).
  - Added support for Italic text (ctrl-shift-1d).
+ - The input box right-click menu now has bold, underline and italic.
  - Added xchat-remote for launching irc:// URLs in existing xchat
    and other functions (Claessens Xavier).
+ - WIN32: Auto-loading perl scripts now also works from:
+   C:\Program Files\XChat\Plugins\
+ - 
  - 
 
 
